<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="search">Search User</string>
    <string name="detail">Detail User</string>
    <string name="app_name">Github Provider</string>
    <string name="copyright">Copyright 2020</string>
    <string name="str_company">Company : </string>
    <string name="todo">todo</string>
    <string name="hint_searching">enter username</string>
    <string name="str_username">username</string>
    <string name="str_repository">Repository :</string>
    <string name="str_followers">Follower :</string>
    <string name="str_following">Following :</string>
    <string name="tab_followers">Followers</string>
    <string name="tab_following">Following</string>
    <string name="str_message">Data Not Found</string>
    <string name="str_follower_null">Has no Followers</string>
    <string name="str_following_null">Never Following</string>
    <string name="str_id_user">idUser</string>
    <string name="str_type_user">typeUser</string>
    <string name="str_null">Not Set</string>
    <string name="str_location">Location : </string>
    <string name="toast_searching">Please wait, searching user. .</string>
    <string name="toast_enter_key">Please, Enter Keyword !</string>
    <string name="loading">. . .</string>
    <string name="str_favorite_user">Favorite User</string>
    <string name="str_set_reminder">Set Reminder</string>
    <string name="set_time">00:00</string>
    <string name="str_message_notification">input message notification</string>
    <string name="toast_repeat">Repeating alarm set up</string>
    <string name="toast_cancel">Repeating alarm canceled</string>
    <string name="set_default_time">Set Default Time</string>
    <string name="toast_turn_off_reminder">Please, turn off notification first!</string>
    <string name="msg_default">Open me now dude :)</string>
    <string name="input_message">Please, input message!</string>
    <string name="msg_delete_user">Are you sure you want to delete this item from your favorite user list?</string>
    <string name="ttl_delete_user">DELETE USER</string>
    <string name="positive_btn">Yes, Sure</string>
    <string name="negative_btn">Cancel cuy</string>
    <string name="success_delete">Data successfully deleted</string>
    <string name="success_add">Successfully added to favorites list</string>
    <string name="not_yet">No users have been added yet</string>
    <string name="msg_internet_on">Your internet data is back :)</string>
    <string name="user_already">Delete it first in the favorites list</string>
    <string name="msg_internet_off">Please turn on your internet data !</string>
    <string name="add_again">User successfully added again :)</string>
    <string name="appwidget_text">GITHUB API</string>
    <string name="not_fav">Blank</string>
    <string name="user_favorite">User Favorite No.</string>
    <string name="other_add">User have been added by Consumer</string>
</resources>